5th try on andriod app

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Gradle .gitignore (https://github.com/github/gitignore/blob/master/Gradle.gitignore)
 .gradle
 **/build/
-!src/**/build/
+!GUI/app/src/main/src/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
