--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ gradle-app.setting
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+./target
 
 # AWS User-specific
 .idea/**/aws.xml
